# django-query-counter

./: AUTHORS.md  CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml  query_counter.py  setup.py
.github/workflows/: check.yml
query_counter/: __init__.py  apps.py  decorators.py  middleware.py  query_counter.py  settings.py
tests/: conftest.py  manage.py  settings.py  test_main.py  urls.py
tests/app/migrations/: 0001_initial.py
tests/apps/: models.py
tests/apps/fixtures/: data.json
tests/apps/migrations/: 0001_initial.py
