[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["query_counter"]

[tool.hatch.build.targets.wheel]
packages = ["query_counter"]

[project]
name = "django-query-counter"
version = "0.4.1"
description = "Debug tool to print SQL queries count to the console"
authors = [{name = "Oleg Smedyuk", email = "oleg.smedyuk@gmail.com"}]
license = "MIT"
keywords = [
  "django",
  "sql",
  "query",
  "count",
  "management",
  "commands",
]
readme = "README.md"
requires-python = ">= 3.9"

dependencies = [
  "tabulate"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/conformist-mw/django-query-counter"
Changelog = "https://github.com/conformist-mw/django-query-counter/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "django",
  "pytest",
  "pytest-django",
  "ruff",
  "tox",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4.5
    env_list =
      lint
      py313-django{51}
      py312-django{51, 50, 42}
      py311-django{51, 50, 42, 41}
      py310-django{51, 50, 42, 41, 40, 32}
      py39-django{42, 41, 40, 32}
      py38-django{42, 41, 40, 32}

    [testenv]
    deps =
        pytest>=7
        pytest-django
        django32: Django>=3.2,<3.3
        django40: Django>=4.0,<4.1
        django41: Django>=4.1,<4.2
        django42: Django>=4.2,<5.0
        django50: Django>=5.0,<5.1
        django51: Django>=5.1,<5.2
    set_env =
        PYTHONDEVMODE = 1
    commands = pytest -Wa -r {posargs:.}

    [gh-actions]
    python =
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311
        3.12: py312
        3.13: py313

    [gh-actions:env]
    DJANGO =
        3.2: dj32
        4.0: dj40
        4.1: dj41
        4.2: dj42
        5.0: dj50
        5.1: dj51

    [testenv:lint]
    description = run linters
    skip_install = true
    deps =
        ruff
    commands = ruff check {posargs:query_counter}
"""

[tool.ruff]
line-length = 80
fix = false
[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "A",    # flake8-builtins
  "COM",  # flake8-commas
  "T20",  # flake8-print
  "Q",    # flake8-quotes
  "BLE",  # flake8-blind-except
  "N",    # pep8-naming
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = "tests"
